# frel

./: Cargo.toml  README.md
.github/: CODE_OF_CONDUCT.md
crates/frel/: Cargo.toml
crates/frel-adapter/frel-adapter-browser/: Cargo.toml
crates/frel-adapter/frel-adapter-browser/src/: lib.rs
crates/frel-compiler/: Cargo.toml
crates/frel-compiler/src/: lib.rs
crates/frel-compiler/src/dsl/: mod.rs
crates/frel-core/: Cargo.toml
crates/frel-core/src/: lib.rs
crates/frel-core/src/fir/: mod.rs
crates/frel-core/src/types/: mod.rs
crates/frel-encoding/: Cargo.toml
crates/frel-encoding/src/: lib.rs
crates/frel-lib/: Cargo.toml
crates/frel-lib/src/: lib.rs
crates/frel-runtime/: Cargo.toml
crates/frel-runtime/src/: lib.rs  linker.rs  render.rs  store.rs
crates/frel-runtime/tests/: store_runtime_tests.rs
crates/frel/src/: lib.rs
doc/: 00_overview.md
doc/00_overview/: 00_context.md  10_overview.md  20_repository.md
doc/10_language/: 00_dsl.md  10_store_declarations.md  20_fragment_creation.md  30_control_statements.md  40_instructions.md  control_statements.md  dsl.md  standard_templates.md  store_declarations.md
doc/20_compile/: compiler.md
doc/30_runtime/: stores.md
frel/: Cargo.toml
frel/src/: store.rs
frel/tests/: store_runtime_tests.rs
tests/: README.md
utils/: Cargo.toml
utils/src/: main.rs
